back-end/k8s/back-end/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hedera-transaction-tool
  labels:
    name: hedera-transaction-tool
