back-end/k8s/back-end/chain-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chain
  namespace: hedera-transaction-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chain
  template:
    metadata:
      labels:
        app: chain
    spec:
      containers:
        - name: chain
          image: chain:local
