back-end/k8s/back-end/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: hedera-transaction-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: gcr.io/transaction-tool-dev/api
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: hedera-transaction-tool
spec:
  selector:
    app: api
  ports:
    - name: 'tcp'
      port: 3001
      protocol: TCP
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: hedera-transaction-tool
spec:
  selector:
    app: api
  ports:
    - name: 'http'
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: NodePort
