back-end/k8s/back-end/notifications-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  namespace: hedera-transaction-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications
  template:
    metadata:
      labels:
        app: notifications
    spec:
      containers:
        - name: notifications
          image: gcr.io/transaction-tool-dev/notifications
---
apiVersion: v1
kind: Service
metadata:
  name: notifications
  namespace: hedera-transaction-tool
#  annotations:
#    cloud.google.com/backend-config: '{"default": "ws-backendconfig"}'
spec:
  ports:
    - name: 'http'
      port: 3020
      protocol: TCP
      targetPort: 3020
  selector:
    app: notifications
  type: NodePort
---
#apiVersion: cloud.google.com/v1
#kind: BackendConfig
#metadata:
#  name: ws-backendconfig
#  namespace: hedera-transaction-tool
#spec:
#  timeoutSec: 3600
