back-end/k8s/back-end/postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: hedera-transaction-tool
spec:
  selector:
    matchLabels:
      app: postgres-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql"
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: hedera-transaction-tool
spec:
  selector:
    app: postgres-deployment
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
