back-end/k8s/back-end/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end
  namespace: hedera-transaction-tool
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: hederatransactiontool.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notifications
                port:
                  number: 3020
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
